--- a/duck.html
+++ b/duck.html
@@ -7,7 +7,7 @@
 
   <body onload="init()">
     <canvas id="map" width="512" height="448"></canvas>
-    <audio src="duck_hunt.mid" id="sfx" preload="auto"></audio>
+    <script src="jquery.js"></script>
     <script src="duck.js"></script>
   </body>
 </html>
